--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,23 @@ p {
   font-style: italic;
 }
 
+.cta {
+  background: rgb(187, 90, 90, 0.3);
+  line-height: 1;
+}
+
+.social-links a {
+  color: black;
+  font-size: 24px;
+  margin: 10px;
+}
+
+.social-links a:hover {
+  color: var(--main-branding-color);
+  font-size: 24px;
+  margin: 10px;
+}
+
 @media (max-width: 900px) {
   .padding-ult {
     padding: 16px;
