--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 body {
   text-align: center;
-  background-color: #f9f5f0;
+  background-color: whitesmoke;
 }
 
 h1,
@@ -23,12 +23,12 @@ h2 {
   padding: 30px;
 }
 
-h2 a {
+a {
   text-decoration: none;
   color: black;
 }
 
-h2 a:hover {
+a:hover {
   color: black;
   text-decoration: underline;
 }
@@ -62,7 +62,7 @@ p {
 }
 
 .padding-ult {
-  padding: 48px;
+  padding: 36px;
 }
 .italicize {
   font-style: italic;
